[package]
name = "rpoly"
version = "0.2.3"
edition = "2021"
authors = ["Tanix <txlu@mail.ustc.edu.cn>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
include = ["src/", "LICENSE-APACHE", "LICENSE-MIT"]
description = "An implementation of the RPOLY algorithm for finding all roots of a real-coefficient univariate polynomial"
documentation = "https://docs.rs/rpoly"
repository = "https://github.com/TanixLu/rpoly"
keywords = ["polynomial", "numerical", "roots", "root-finding", "math"]
categories = ["algorithms", "mathematics"]

[dev-dependencies]
rand = "0.8.5"
