[package]
name = "rpoly"
version = "0.2.7"
edition = "2021"
authors = ["Tanix <txlu@mail.ustc.edu.cn>"]
license = "ACM"
readme = "README.md"
include = ["src/", "LICENSE-ACM"]
description = "An implementation of the RPOLY algorithm for finding all roots of a real-coefficient univariate polynomial"
documentation = "https://docs.rs/rpoly"
repository = "https://github.com/TanixLu/rpoly"
keywords = ["polynomial", "numerical", "roots", "root-finding", "math"]
categories = ["algorithms", "mathematics"]

[dev-dependencies]
rand = "0.8.5"
